# compiler-interpreter

./: .clang-format  .gitignore  Makefile  c.tab.c  c.y
include/: MEM.h  create.h  env.h  eval.h  interpreter.h  pain_log.h  string_pool.h
interpreter/: CMakeLists.txt  interpreter.h  main.cpp
interpreter/ast/: creator.cpp  creator.h  exprs.h  parser.cpp  parser.h
interpreter/common/: dummy_lock.hpp  free_list.hpp
interpreter/logging/: interpreter_logger.hpp
memory/: Makefile  main.c  memory.c  memory.h  storage.c
ms/: Makefile  create.c  eval.c  interpreter.c  lex.yy.c  main.c  ms.l  ms.y  rtst.sh  string_pool.c  tst.ms  tst2.ms  tst3.ms  y.output  y.tab.c  y.tab.h
